feat(api)!: Improved InfractionCheck.Builder to accept Patterns
- Improved default InfractionCheck performance
- Implement AbstractCheck interface in Builders