@@ -1,9 +1,8 @@
 package me.dreamerzero.chatregulator.modules.checks;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -14,6 +13,7 @@ import me.dreamerzero.chatregulator.config.Configuration;
 import me.dreamerzero.chatregulator.enums.ControlType;
 import me.dreamerzero.chatregulator.enums.InfractionType;
 import me.dreamerzero.chatregulator.result.Result;
+import net.kyori.adventure.builder.AbstractBuilder;
 import me.dreamerzero.chatregulator.result.PatternResult;
 import me.dreamerzero.chatregulator.result.ReplaceableResult;
 
@@ -21,14 +21,14 @@ import me.dreamerzero.chatregulator.result.ReplaceableResult;
  * Utilities for the detection of restringed words
  */
 public class InfractionCheck implements ICheck {
-    private final Collection<String> blockedWords;
+    private final Collection<Pattern> blockedWords;
     private final boolean blockable;
 
     private InfractionCheck(){
-        this(Configuration.getConfig().getInfractionsConfig().isBlockable(), Configuration.getBlacklist().getBlockedWord());
+        this(Configuration.getConfig().getInfractionsConfig().isBlockable(), Configuration.getBlacklist().getBlockedPatterns());
     }
 
-    private InfractionCheck(boolean blockable, Collection<String> blockedWords){
+    private InfractionCheck(boolean blockable, Collection<Pattern> blockedWords){
         this.blockedWords = blockedWords;
         this.blockable = blockable;
     }
@@ -45,17 +45,16 @@ public class InfractionCheck implements ICheck {
      */
     @Override
     public CompletableFuture<Result> check(@NotNull final String string){
-        final Set<Pattern> patterns = new HashSet<>();
+        final List<Pattern> patterns = new ArrayList<>();
         boolean detected = false;
-        for (String blockedWord : blockedWords){
-            Pattern wordpattern = Pattern.compile(blockedWord, Pattern.CASE_INSENSITIVE);
-            Matcher match = wordpattern.matcher(string);
+        for (final Pattern pattern : blockedWords) {
+            final Matcher match = pattern.matcher(string);
             if(match.find()){
                 detected = true;
                 if(blockable) {
-                    return CompletableFuture.completedFuture(new PatternResult(match.group(), true, wordpattern, match));
+                    return CompletableFuture.completedFuture(new PatternResult(match.group(), true, pattern, match));
                 }
-                patterns.add(wordpattern);
+                patterns.add(pattern);
             }
         }
         return CompletableFuture.completedFuture(detected
@@ -85,20 +84,28 @@ public class InfractionCheck implements ICheck {
         return new InfractionCheck.Builder();
     }
 
-    public static class Builder{
-        private Collection<String> blockedWords;
+    public static class Builder implements AbstractBuilder<InfractionCheck> {
+        private List<Pattern> blockedWords;
         private boolean replaceable;
         private boolean edited = false;
 
         Builder(){}
 
-        public Builder blockedStrings(Collection<String> strings){
-            this.blockedWords = strings;
+        public Builder blockedPattern(Collection<Pattern> patterns){
+            if(this.blockedWords == null) {
+                this.blockedWords = new ArrayList<>(patterns);
+            } else {
+                this.blockedWords.addAll(patterns);
+            }
             return this;
         }
 
-        public Builder blockedStrings(String... strings){
-            this.blockedWords = Arrays.asList(strings);
+        public Builder blockedPatterns(Pattern... patterns){
+            if(this.blockedWords == null) {
+                this.blockedWords = new ArrayList<>(List.of(patterns));
+            } else {
+                this.blockedWords.addAll(List.of(patterns));
+            }
             return this;
         }
 
@@ -108,9 +115,10 @@ public class InfractionCheck implements ICheck {
             return this;
         }
 
+        @Override
         public InfractionCheck build(){
-            if(blockedWords == null){
-                blockedWords = Configuration.getBlacklist().getBlockedWord();
+            if(this.blockedWords == null){
+                this.blockedWords = new ArrayList<>(Configuration.getBlacklist().getBlockedPatterns());
             }
             if(!edited){
                 this.replaceable = Configuration.getConfig().getInfractionsConfig().getControlType() == ControlType.REPLACE;
